feat: invalidate access and refresh tokens when signing out
