# internal/api/import.go
@@ -7,7 +7,6 @@ import (
 	"github.com/imba28/spolyr/internal/lyrics"
 	"github.com/imba28/spolyr/internal/openapi/openapi"
 	"github.com/imba28/spolyr/internal/spotify"
-	spotify2 "github.com/zmb3/spotify/v2"
 	"log"
 	"net/http"
 )
@@ -31,6 +30,10 @@ type ImportApiServicer struct {
 }
 
 func (i ImportApiServicer) ImportLyricsTrackIdPost(ctx context.Context, id string) (openapi.ImplResponse, error) {
+	if !isAuthenticated(ctx) {
+		return openapi.Response(http.StatusUnauthorized, nil), ErrNotAuthenticated
+	}
+
 	t, err := i.repo.FindTrack(id)
 	if err != nil {
 		return openapi.Response(http.StatusNotFound, nil), nil
@@ -55,6 +58,10 @@ func (i ImportApiServicer) ImportLyricsTrackIdPost(ctx context.Context, id strin
 }
 
 func (i ImportApiServicer) ImportLyricsGet(ctx context.Context) (openapi.ImplResponse, error) {
+	if !isAuthenticated(ctx) {
+		return openapi.Response(http.StatusUnauthorized, nil), ErrNotAuthenticated
+	}
+
 	if !i.syncer.Syncing() {
 		return openapi.Response(http.StatusOK, openapi.LyricsImportStatus{
 			Running: false,
@@ -72,12 +79,11 @@ func (i ImportApiServicer) ImportLyricsGet(ctx context.Context) (openapi.ImplRes
 }
 
 func (i ImportApiServicer) ImportLibraryPost(ctx context.Context) (openapi.ImplResponse, error) {
-	c := spotifyClientFromContext(ctx)
-	if c == nil {
-		return openapi.Response(http.StatusForbidden, nil), nil
+	if !isAuthenticated(ctx) {
+		return openapi.Response(http.StatusUnauthorized, nil), nil
 	}
 
-	err := spotify.SyncTracks(ctx, spotify.NewSpotifyTrackProvider(c), i.repo)
+	err := spotify.SyncTracks(ctx, spotify.NewSpotifyTrackProvider(oauthClientFromContext(ctx)), i.repo)
 	if err != nil {
 		log.Println(err)
 		return openapi.Response(http.StatusInternalServerError, nil), nil
@@ -87,6 +93,10 @@ func (i ImportApiServicer) ImportLibraryPost(ctx context.Context) (openapi.ImplR
 }
 
 func (i ImportApiServicer) ImportLyricsPost(ctx context.Context) (openapi.ImplResponse, error) {
+	if !isAuthenticated(ctx) {
+		return openapi.Response(http.StatusUnauthorized, nil), ErrNotAuthenticated
+	}
+
 	_, err := i.syncer.Sync()
 	if err == lyrics.ErrBusy {
 		return openapi.Response(http.StatusTooManyRequests, nil), nil
@@ -96,12 +106,11 @@ func (i ImportApiServicer) ImportLyricsPost(ctx context.Context) (openapi.ImplRe
 }
 
 func (i ImportApiServicer) ImportPlaylistIdPost(ctx context.Context, playlistId string) (openapi.ImplResponse, error) {
-	token := tokenFromContext(ctx)
-	if token == nil {
-		return openapi.Response(http.StatusUnauthorized, nil), nil
+	if !isAuthenticated(ctx) {
+		return openapi.Response(http.StatusUnauthorized, nil), ErrNotAuthenticated
 	}
 
-	c := spotify2.New(auth.Client(ctx, token))
+	c := oauthClientFromContext(ctx)
 	err := spotify.NewPlaylistProvider(c, i.repo).Download(ctx, playlistId)
 	if err != nil {
 		return openapi.Response(http.StatusInternalServerError, nil), nil
